--- a/cisi543b/apprails/app/views/cilists/index.html.erb
+++ b/cisi543b/apprails/app/views/cilists/index.html.erb
@@ -42,6 +42,7 @@
       <th>Improvement suggestion</th>
       <th>Implementation status</th>
       <th>Feasibility</th>
+      <th>Points Awarded</th>
       <th>User</th>
 
     </tr>
@@ -65,6 +66,7 @@
         <td><%= cilist.improvement_suggestion %></td>
         <td><%= cilist.implementation_status %></td>
         <td><%= cilist.feasibility %></td>
+        <td><%= cilist.points_awarded %></td>
         <td><%= cilist.user %></td>
 
       </tr>
