--- a/cisi543b/apprails/app/views/cilists/_form.html.erb
+++ b/cisi543b/apprails/app/views/cilists/_form.html.erb
@@ -15,27 +15,27 @@
   <div class="form-group">
             <%= f.label :cell_or_location, class: "col-sm-2 control-label" %>
         <div class="col-sm-10">
-        <%= f.text_field :cell_or_location, class: "form-control" %>
+        <%= f.text_field :cell_or_location, class: "form-control" , required: true %>
       </div>
         </div>
 
   <div class="form-group">
             <%= f.label :benefit_id, class: "col-sm-2 control-label" %>
         <div class="col-sm-10">
-          <%= f.collection_select :benefit_id, Benefit.all, :id, :name,  { prompt: true }, { :class => 'dgselect2' }  %>
+          <%= f.collection_select :benefit_id, Benefit.all, :id, :name,  { prompt: true }, { :class => 'dgselect2', required: true }  %>
         </div>
     </div>
   <div class="form-group">
             <%= f.label :current_state, class: "col-sm-2 control-label" %>
         <div class="col-sm-10">
-        <%= f.text_area :current_state, class: "form-control" %>
+        <%= f.text_area :current_state, class: "form-control", required: 'true' %>
       </div>
         </div>
 
         <div class="form-group">
             <%= f.label :improvement_suggestion, class: "col-sm-2 control-label" %>
         <div class="col-sm-10">
-        <%= f.text_area :improvement_suggestion, class: "form-control" %>
+        <%= f.text_area :improvement_suggestion, class: "form-control", required: 'true' %>
       </div>
         </div>
 
