add.point.balance.2020-11-06_Fri_12.27-PM

--- a/cisi543b/apprails/app/views/home/index.html.erb
+++ b/cisi543b/apprails/app/views/home/index.html.erb
@@ -20,6 +20,9 @@
 <%= link_to 'Points redeemed', points_path, class: "btn btn-primary", :style=>'color:#FFFFFF;' %>
 <br>
 <br>
+<%= link_to 'Points Balance', points_balances_path, class: "btn btn-primary", :style=>'color:#FFFFFF;' %>
+<br>
+<br>
 
 
 
