--- a/cisi543b/apprails/app/views/devise/mailer/password_change.html.erb
+++ b/cisi543b/apprails/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,12 @@
 <p>Hello <%= @resource.email %>!</p>
 
 <p>We're contacting you to notify you that your password has been changed.</p>
+
+
+
+<p>This email is from the Stackpole Stratford CI Suggestions System.</p>
+
+<p>You are getting this email because you signed up using the email address this email was sent to.</p>
+
+<p>If you believe this is an error, contact the Stackpole Stratford  CI Coordinator, the IT Department, or dgleba@stackpole.com.
+</p>
