--- a/cisi543b/apprails/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/cisi543b/apprails/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,22 @@
 <p>Hello <%= @resource.email %>!</p>
 
+
+
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
+
+
+
+<br>
+
+<h2>Info:</h2>
+<p>This email is from the Stackpole Stratford CI Suggestions System.</p>
+
+<p>You are getting this email because you signed up using the email address this email was sent to.</p>
+
+<p>If you believe this is an error, contact the Stackpole Stratford  CI Coordinator, the IT Department, or dgleba@stackpole.com.
+</p>
