--- a/cisi543b/apprails/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/cisi543b/apprails/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,30 @@
 <p>Welcome <%= @email %>!</p>
 
+
+
+<p>This email is from the Stackpole Stratford CI Suggestions System.</p>
+
+<p>You are getting this email because you signed up using the email address this email was sent to.</p>
+
+<p>If you believe this is an error, contact the Stackpole Stratford  CI Coordinator, the IT Department, or dgleba@stackpole.com.
+</p>
+
+
+<p> 
+You can use the app now, but you must confirm your account within 3 days by clicking the link below. 
+This confirmation indicates you have valid access to the email address you signed up with.
+</p>
+
+
+<h2>Confirm:</h2>
+
+
 <p>You can confirm your account email through the link below:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+
+
+<br>
+
+
