adj.per.minutes

--- a/cisi543b/apprails/app/views/cilists/show.html.erb
+++ b/cisi543b/apprails/app/views/cilists/show.html.erb
@@ -25,6 +25,14 @@
   <strong>Implementation status:</strong>
   <%= @cilist.implementation_status %>
 </p>
+<p>
+  <strong>Points Awarded:</strong>
+    <%= @cilist.points_awarded %>
+</p>
+<p>
+  <strong>Note_to_originator:</strong>
+    <%= @cilist.note_to_originator %>
+</p>
 
 
 <p>
