--- a/cisi543b/apprails/app/views/cilists/index.html.erb
+++ b/cisi543b/apprails/app/views/cilists/index.html.erb
@@ -12,7 +12,7 @@
   <div class="col-sm-3">
     <%= search_form_for @q, class: 'search-form' do |f| %>
       <div class="input-group">
-        <%= f.search_field :cell_or_location_cont, class: 'form-control' %>
+        <%= f.search_field :improvement_suggestion_cont_any, class: 'form-control' %>
         <span class="input-group-btn">
           <button class="btn btn-primary">Search <i class="fa fa-search"></i>
           </button>
