--- a/cisi543b/apprails/app/views/cilists/show.html.erb
+++ b/cisi543b/apprails/app/views/cilists/show.html.erb
@@ -30,6 +30,11 @@
     <%= @cilist.points_awarded %>
 </p>
 <p>
+  <strong>Contact:</strong>
+    <%= @cilist.responsible %>
+</p>
+
+<p>
   <strong>Note_to_originator:</strong>
     <%= @cilist.note_to_originator %>
 </p>
@@ -40,6 +45,14 @@
   <%= @cilist.user %>
 </p>
 
+<p>
+  <strong>Created:</strong>
+    <%= @cilist.created_at %>
+</p>
+<p>
+  <strong>CI id:</strong>
+    <%= @cilist.id %>
+</p>
 
 
 <br>
